feat: Step 2A toy dataset and save to CSV

--- a/chatbot_project.ipynb
+++ b/chatbot_project.ipynb
@@ -286,9 +286,294 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0f8fc9db-8186-41f6-8d3e-8bbf14238b53",
+   "metadata": {},
+   "source": [
+    "## Step 2 — Data Setup (2A: toy dataset)\n",
+    "We’ll create a tiny in-notebook dataset to verify our flow before using a real Kaggle dataset.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1078a7d4-c94b-442c-b71c-4304d61f9bee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>intent</th>\n",
+       "      <th>patterns</th>\n",
+       "      <th>responses</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ask_skills_for_data_science</td>\n",
+       "      <td>[What skills do I need for data science?, How ...</td>\n",
+       "      <td>Data Science needs skills like Python, SQL, St...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ask_skills_for_ai</td>\n",
+       "      <td>[What do I need to study for AI?, What are AI ...</td>\n",
+       "      <td>AI requires knowledge of Python, Neural Networ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ask_job_recommendation</td>\n",
+       "      <td>[What job is good for me if I like numbers?, I...</td>\n",
+       "      <td>You might enjoy careers like Data Analyst, Sta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ask_learning_path</td>\n",
+       "      <td>[Where should I start learning data analysis?,...</td>\n",
+       "      <td>Start with Python, then learn data visualizati...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>greeting</td>\n",
+       "      <td>[Hi, Hello, Hey]</td>\n",
+       "      <td>Hello! How can I help you today?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>goodbye</td>\n",
+       "      <td>[Bye, See you later, Goodbye]</td>\n",
+       "      <td>Goodbye! Keep learning and stay curious!</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        intent  \\\n",
+       "0  ask_skills_for_data_science   \n",
+       "1            ask_skills_for_ai   \n",
+       "2       ask_job_recommendation   \n",
+       "3            ask_learning_path   \n",
+       "4                     greeting   \n",
+       "5                      goodbye   \n",
+       "\n",
+       "                                            patterns  \\\n",
+       "0  [What skills do I need for data science?, How ...   \n",
+       "1  [What do I need to study for AI?, What are AI ...   \n",
+       "2  [What job is good for me if I like numbers?, I...   \n",
+       "3  [Where should I start learning data analysis?,...   \n",
+       "4                                   [Hi, Hello, Hey]   \n",
+       "5                      [Bye, See you later, Goodbye]   \n",
+       "\n",
+       "                                           responses  \n",
+       "0  Data Science needs skills like Python, SQL, St...  \n",
+       "1  AI requires knowledge of Python, Neural Networ...  \n",
+       "2  You might enjoy careers like Data Analyst, Sta...  \n",
+       "3  Start with Python, then learn data visualizati...  \n",
+       "4                   Hello! How can I help you today?  \n",
+       "5           Goodbye! Keep learning and stay curious!  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = {\n",
+    "    \"intent\": [\n",
+    "        \"ask_skills_for_data_science\",\n",
+    "        \"ask_skills_for_ai\",\n",
+    "        \"ask_job_recommendation\",\n",
+    "        \"ask_learning_path\",\n",
+    "        \"greeting\",\n",
+    "        \"goodbye\",\n",
+    "    ],\n",
+    "    \"patterns\": [\n",
+    "        [\"What skills do I need for data science?\", \"How to become a data scientist?\"],\n",
+    "        [\"What do I need to study for AI?\", \"What are AI skills?\"],\n",
+    "        [\"What job is good for me if I like numbers?\", \"I enjoy problem-solving, any job ideas?\"],\n",
+    "        [\"Where should I start learning data analysis?\", \"Best way to learn machine learning?\"],\n",
+    "        [\"Hi\", \"Hello\", \"Hey\"],\n",
+    "        [\"Bye\", \"See you later\", \"Goodbye\"],\n",
+    "    ],\n",
+    "    \"responses\": [\n",
+    "        \"Data Science needs skills like Python, SQL, Statistics, and Machine Learning.\",\n",
+    "        \"AI requires knowledge of Python, Neural Networks, and Data Modeling.\",\n",
+    "        \"You might enjoy careers like Data Analyst, Statistician, or Research Scientist.\",\n",
+    "        \"Start with Python, then learn data visualization and basic machine learning.\",\n",
+    "        \"Hello! How can I help you today?\",\n",
+    "        \"Goodbye! Keep learning and stay curious!\",\n",
+    "    ],\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fcacc4e3-4738-4002-a5a7-7f849479aadd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>intent</th>\n",
+       "      <th>response</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>What skills do I need for data science?</td>\n",
+       "      <td>ask_skills_for_data_science</td>\n",
+       "      <td>Data Science needs skills like Python, SQL, St...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>How to become a data scientist?</td>\n",
+       "      <td>ask_skills_for_data_science</td>\n",
+       "      <td>Data Science needs skills like Python, SQL, St...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>What do I need to study for AI?</td>\n",
+       "      <td>ask_skills_for_ai</td>\n",
+       "      <td>AI requires knowledge of Python, Neural Networ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>What are AI skills?</td>\n",
+       "      <td>ask_skills_for_ai</td>\n",
+       "      <td>AI requires knowledge of Python, Neural Networ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>What job is good for me if I like numbers?</td>\n",
+       "      <td>ask_job_recommendation</td>\n",
+       "      <td>You might enjoy careers like Data Analyst, Sta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>I enjoy problem-solving, any job ideas?</td>\n",
+       "      <td>ask_job_recommendation</td>\n",
+       "      <td>You might enjoy careers like Data Analyst, Sta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Where should I start learning data analysis?</td>\n",
+       "      <td>ask_learning_path</td>\n",
+       "      <td>Start with Python, then learn data visualizati...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Best way to learn machine learning?</td>\n",
+       "      <td>ask_learning_path</td>\n",
+       "      <td>Start with Python, then learn data visualizati...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Hi</td>\n",
+       "      <td>greeting</td>\n",
+       "      <td>Hello! How can I help you today?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Hello</td>\n",
+       "      <td>greeting</td>\n",
+       "      <td>Hello! How can I help you today?</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           text                       intent  \\\n",
+       "0       What skills do I need for data science?  ask_skills_for_data_science   \n",
+       "1               How to become a data scientist?  ask_skills_for_data_science   \n",
+       "2               What do I need to study for AI?            ask_skills_for_ai   \n",
+       "3                           What are AI skills?            ask_skills_for_ai   \n",
+       "4    What job is good for me if I like numbers?       ask_job_recommendation   \n",
+       "5       I enjoy problem-solving, any job ideas?       ask_job_recommendation   \n",
+       "6  Where should I start learning data analysis?            ask_learning_path   \n",
+       "7           Best way to learn machine learning?            ask_learning_path   \n",
+       "8                                            Hi                     greeting   \n",
+       "9                                         Hello                     greeting   \n",
+       "\n",
+       "                                            response  \n",
+       "0  Data Science needs skills like Python, SQL, St...  \n",
+       "1  Data Science needs skills like Python, SQL, St...  \n",
+       "2  AI requires knowledge of Python, Neural Networ...  \n",
+       "3  AI requires knowledge of Python, Neural Networ...  \n",
+       "4  You might enjoy careers like Data Analyst, Sta...  \n",
+       "5  You might enjoy careers like Data Analyst, Sta...  \n",
+       "6  Start with Python, then learn data visualizati...  \n",
+       "7  Start with Python, then learn data visualizati...  \n",
+       "8                   Hello! How can I help you today?  \n",
+       "9                   Hello! How can I help you today?  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rows = []\n",
+    "for _, row in df.iterrows():\n",
+    "    for pattern in row[\"patterns\"]:\n",
+    "        rows.append({\"text\": pattern, \"intent\": row[\"intent\"], \"response\": row[\"responses\"]})\n",
+    "\n",
+    "chatbot_df = pd.DataFrame(rows)\n",
+    "chatbot_df.head(10)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3883a0d9-91dc-43ff-aa1d-4be563f0d43b",
+   "id": "f0465e62-2136-4052-bca5-c10f00ad4d0c",
    "metadata": {},
    "outputs": [],
    "source": []
