feat: cleaned dataset from Intent.json and saved to CSV

--- a/chatbot_project.ipynb
+++ b/chatbot_project.ipynb
@@ -572,11 +572,253 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f0465e62-2136-4052-bca5-c10f00ad4d0c",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved: chatbot_dataset.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "chatbot_df.to_csv(\"chatbot_dataset.csv\", index=False)\n",
+    "print(\"Saved: chatbot_dataset.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "593f1b97-b2d4-4e54-a684-8c4d56d77205",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting kaggle\n",
+      "  Downloading kaggle-1.7.4.5-py3-none-any.whl.metadata (16 kB)\n",
+      "Requirement already satisfied: bleach in c:\\users\\hp\\miniconda3\\lib\\site-packages (from kaggle) (6.2.0)\n",
+      "Requirement already satisfied: certifi>=14.05.14 in c:\\users\\hp\\miniconda3\\lib\\site-packages (from kaggle) (2025.1.31)\n",
+      "Requirement already satisfied: charset-normalizer in c:\\users\\hp\\miniconda3\\lib\\site-packages (from kaggle) (3.4.1)\n",
+      "Requirement already satisfied: idna in c:\\users\\hp\\miniconda3\\lib\\site-packages (from kaggle) (3.10)\n",
+      "Requirement already satisfied: protobuf in c:\\users\\hp\\miniconda3\\lib\\site-packages (from kaggle) (6.33.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.5.3 in c:\\users\\hp\\miniconda3\\lib\\site-packages (from kaggle) (2.9.0.post0)\n",
+      "Collecting python-slugify (from kaggle)\n",
+      "  Downloading python_slugify-8.0.4-py2.py3-none-any.whl.metadata (8.5 kB)\n",
+      "Requirement already satisfied: requests in c:\\users\\hp\\miniconda3\\lib\\site-packages (from kaggle) (2.32.3)\n",
+      "Requirement already satisfied: setuptools>=21.0.0 in c:\\users\\hp\\miniconda3\\lib\\site-packages (from kaggle) (75.8.0)\n",
+      "Requirement already satisfied: six>=1.10 in c:\\users\\hp\\miniconda3\\lib\\site-packages (from kaggle) (1.17.0)\n",
+      "Collecting text-unidecode (from kaggle)\n",
+      "  Downloading text_unidecode-1.3-py2.py3-none-any.whl.metadata (2.4 kB)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\hp\\miniconda3\\lib\\site-packages (from kaggle) (4.67.1)\n",
+      "Requirement already satisfied: urllib3>=1.15.1 in c:\\users\\hp\\miniconda3\\lib\\site-packages (from kaggle) (2.3.0)\n",
+      "Requirement already satisfied: webencodings in c:\\users\\hp\\miniconda3\\lib\\site-packages (from kaggle) (0.5.1)\n",
+      "Requirement already satisfied: colorama in c:\\users\\hp\\miniconda3\\lib\\site-packages (from tqdm->kaggle) (0.4.6)\n",
+      "Downloading kaggle-1.7.4.5-py3-none-any.whl (181 kB)\n",
+      "Downloading python_slugify-8.0.4-py2.py3-none-any.whl (10 kB)\n",
+      "Downloading text_unidecode-1.3-py2.py3-none-any.whl (78 kB)\n",
+      "Installing collected packages: text-unidecode, python-slugify, kaggle\n",
+      "Successfully installed kaggle-1.7.4.5 python-slugify-8.0.4 text-unidecode-1.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install kaggle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "39fc66e3-824f-4bba-a50f-814cd322879f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kaggle config dir: C:\\Users\\hp\\projects\\intelligent-chatbot-notebook\\.kaggle\n",
+      "Has kaggle.json: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.environ[\"KAGGLE_CONFIG_DIR\"] = os.path.join(os.getcwd(), \".kaggle\")\n",
+    "# Optional check:\n",
+    "print(\"Kaggle config dir:\", os.environ[\"KAGGLE_CONFIG_DIR\"])\n",
+    "print(\"Has kaggle.json:\", os.path.exists(os.path.join(os.environ[\"KAGGLE_CONFIG_DIR\"], \"kaggle.json\")))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f68b5105-0419-4d40-90ab-6030e14757dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset URL: https://www.kaggle.com/datasets/elvinagammed/chatbots-intent-recognition-dataset\n",
+      "License(s): copyright-authors\n",
+      "Downloading chatbots-intent-recognition-dataset.zip to data\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  0%|          | 0.00/16.9k [00:00<?, ?B/s]\n",
+      "100%|##########| 16.9k/16.9k [00:00<?, ?B/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "!kaggle datasets download -d elvinagammed/chatbots-intent-recognition-dataset -p data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "384ba518-f855-47ed-8ee1-6d75795682cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracted files:\n",
+      "data\\chatbots-intent-recognition-dataset.zip\n",
+      "data\\Intent.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "import zipfile, glob\n",
+    "\n",
+    "zip_path = sorted(glob.glob(\"data/*.zip\"))[0]\n",
+    "with zipfile.ZipFile(zip_path, \"r\") as z:\n",
+    "    z.extractall(\"data\")\n",
+    "\n",
+    "print(\"Extracted files:\")\n",
+    "for p in glob.glob(\"data/**/*\", recursive=True):\n",
+    "    print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "39f65be7-ca5e-4b37-83b5-0b2ce6eb261d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['intents']\n",
+      "[{'context': {'clear': False, 'in': '', 'out': 'GreetingUserRequest'},\n",
+      "  'entities': [],\n",
+      "  'entityType': 'NA',\n",
+      "  'extension': {'entities': False, 'function': '', 'responses': []},\n",
+      "  'intent': 'Greeting',\n",
+      "  'responses': ['Hi human, please tell me your GeniSys user',\n",
+      "                'Hello human, please tell me your GeniSys user',\n",
+      "                'Hola human, please tell me your GeniSys user'],\n",
+      "  'text': ['Hi',\n",
+      "           'Hi there',\n",
+      "           'Hola',\n",
+      "           'Hello',\n",
+      "           'Hello there',\n",
+      "           'Hya',\n",
+      "           'Hya there']},\n",
+      " {'context': {'clear': True, 'in': 'GreetingUserRequest', 'out': ''},\n",
+      "  'entities': [{'entity': 'HUMAN', 'rangeFrom': 3, 'rangeTo': 4},\n",
+      "               {'entity': 'HUMAN', 'rangeFrom': 2, 'rangeTo': 3},\n",
+      "               {'entity': 'HUMAN', 'rangeFrom': 1, 'rangeTo': 2},\n",
+      "               {'entity': 'HUMAN', 'rangeFrom': 2, 'rangeTo': 3},\n",
+      "               {'entity': 'HUMAN', 'rangeFrom': 3, 'rangeTo': 4},\n",
+      "               {'entity': 'HUMAN', 'rangeFrom': 2, 'rangeTo': 3},\n",
+      "               {'entity': 'HUMAN', 'rangeFrom': 1, 'rangeTo': 2},\n",
+      "               {'entity': 'HUMAN', 'rangeFrom': 2, 'rangeTo': 3}],\n",
+      "  'entityType': 'NA',\n",
+      "  'extension': {'entities': True,\n",
+      "                'function': 'extensions.gHumans.updateHuman',\n",
+      "                'responses': ['Hi %%HUMAN%%! How can I help?',\n",
+      "                              'Hi %%HUMAN%%, how can I help you?',\n",
+      "                              'Hello %%HUMAN%%, what can I do for you?',\n",
+      "                              'Hola %%HUMAN%%, how can I help you?',\n",
+      "                              'OK hi %%HUMAN%%, what can I do for you?']},\n",
+      "  'intent': 'GreetingResponse',\n",
+      "  'responses': ['Great! Hi <HUMAN>! How can I help?',\n",
+      "                'Good! Hi <HUMAN>, how can I help you?',\n",
+      "                'Cool! Hello <HUMAN>, what can I do for you?',\n",
+      "                'OK! Hola <HUMAN>, how can I help you?',\n",
+      "                'OK! hi <HUMAN>, what can I do for you?'],\n",
+      "  'text': ['My user is Adam',\n",
+      "           'This is Adam',\n",
+      "           'I am Adam',\n",
+      "           'It is Adam',\n",
+      "           'My user is Bella',\n",
+      "           'This is Bella',\n",
+      "           'I am Bella',\n",
+      "           'It is Bella']}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "from pprint import pprint\n",
+    "\n",
+    "# Step 1: Load and preview the JSON\n",
+    "with open(\"data/Intent.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "# Step 2: Show the first few items so we can inspect structure\n",
+    "if isinstance(data, dict):\n",
+    "    # If it's a dictionary, show keys and sample content\n",
+    "    pprint(list(data.keys()))\n",
+    "    if \"intents\" in data:\n",
+    "        pprint(data[\"intents\"][:2])\n",
+    "    else:\n",
+    "        pprint(data)\n",
+    "else:\n",
+    "    # If it's a list, show first 2 items\n",
+    "    pprint(data[:2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1adf4bb-1e12-4a8c-b3ad-76b2b7e2a006",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "rows = []\n",
+    "for intent in data[\"intents\"]:\n",
+    "    intent_name = intent.get(\"intent\", \"unknown\")\n",
+    "    patterns = intent.get(\"text\", [])\n",
+    "    responses = intent.get(\"responses\", [])\n",
+    "    \n",
+    "    # Make one row per text pattern\n",
+    "    for pattern in patterns:\n",
+    "        rows.append({\n",
+    "            \"intent\": intent_name,\n",
+    "            \"pattern\": pattern,\n",
+    "            \"response\": responses[0] if responses else None\n",
+    "        })\n",
+    "\n",
+    "df = pd.DataFrame(rows)\n",
+    "df.head(10)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
