--- a/chatbot_project.ipynb
+++ b/chatbot_project.ipynb
@@ -794,10 +794,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e1adf4bb-1e12-4a8c-b3ad-76b2b7e2a006",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>intent</th>\n",
+       "      <th>pattern</th>\n",
+       "      <th>response</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Greeting</td>\n",
+       "      <td>Hi</td>\n",
+       "      <td>Hi human, please tell me your GeniSys user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Greeting</td>\n",
+       "      <td>Hi there</td>\n",
+       "      <td>Hi human, please tell me your GeniSys user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Greeting</td>\n",
+       "      <td>Hola</td>\n",
+       "      <td>Hi human, please tell me your GeniSys user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Greeting</td>\n",
+       "      <td>Hello</td>\n",
+       "      <td>Hi human, please tell me your GeniSys user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Greeting</td>\n",
+       "      <td>Hello there</td>\n",
+       "      <td>Hi human, please tell me your GeniSys user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Greeting</td>\n",
+       "      <td>Hya</td>\n",
+       "      <td>Hi human, please tell me your GeniSys user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Greeting</td>\n",
+       "      <td>Hya there</td>\n",
+       "      <td>Hi human, please tell me your GeniSys user</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>GreetingResponse</td>\n",
+       "      <td>My user is Adam</td>\n",
+       "      <td>Great! Hi &lt;HUMAN&gt;! How can I help?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>GreetingResponse</td>\n",
+       "      <td>This is Adam</td>\n",
+       "      <td>Great! Hi &lt;HUMAN&gt;! How can I help?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>GreetingResponse</td>\n",
+       "      <td>I am Adam</td>\n",
+       "      <td>Great! Hi &lt;HUMAN&gt;! How can I help?</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             intent          pattern  \\\n",
+       "0          Greeting               Hi   \n",
+       "1          Greeting         Hi there   \n",
+       "2          Greeting             Hola   \n",
+       "3          Greeting            Hello   \n",
+       "4          Greeting      Hello there   \n",
+       "5          Greeting              Hya   \n",
+       "6          Greeting        Hya there   \n",
+       "7  GreetingResponse  My user is Adam   \n",
+       "8  GreetingResponse     This is Adam   \n",
+       "9  GreetingResponse        I am Adam   \n",
+       "\n",
+       "                                     response  \n",
+       "0  Hi human, please tell me your GeniSys user  \n",
+       "1  Hi human, please tell me your GeniSys user  \n",
+       "2  Hi human, please tell me your GeniSys user  \n",
+       "3  Hi human, please tell me your GeniSys user  \n",
+       "4  Hi human, please tell me your GeniSys user  \n",
+       "5  Hi human, please tell me your GeniSys user  \n",
+       "6  Hi human, please tell me your GeniSys user  \n",
+       "7          Great! Hi <HUMAN>! How can I help?  \n",
+       "8          Great! Hi <HUMAN>! How can I help?  \n",
+       "9          Great! Hi <HUMAN>! How can I help?  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -819,6 +941,33 @@
     "df.head(10)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "392bb82e-c503-49cb-bc6c-3f978d7bf6d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved cleaned dataset as chatbot_intents_dataset.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.to_csv(\"chatbot_intents_dataset.csv\", index=False)\n",
+    "print(\"Saved cleaned dataset as chatbot_intents_dataset.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60895574-a528-4af7-9c2d-ef9589904314",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
