Embeddings and Logic

--- a/chatbot_project.ipynb
+++ b/chatbot_project.ipynb
@@ -953,8 +953,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "c0a3cb97-aa8b-45e2-936c-3dfb58ff40ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "def get_response(user_input, df, model):\n",
+    "    # Step 1: Encode user query\n",
+    "    query_emb = model.encode([user_input], normalize_embeddings=True)\n",
+    "    \n",
+    "    # Step 2: Compute cosine similarity with existing embeddings\n",
+    "    similarities = cosine_similarity(query_emb, np.vstack(df[\"embedding\"].values))[0]\n",
+    "    \n",
+    "    # Step 3: Pick the highest similarity\n",
+    "    best_idx = np.argmax(similarities)\n",
+    "    \n",
+    "    # Step 4: Return intent, response, and similarity score\n",
+    "    return {\n",
+    "        \"user_input\": user_input,\n",
+    "        \"predicted_intent\": df.iloc[best_idx][\"intent\"],\n",
+    "        \"response\": df.iloc[best_idx][\"response\"],\n",
+    "        \"similarity\": round(similarities[best_idx], 3)\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9d8097dc-1bb9-447f-81f0-830903146221",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🗣️ User: hello there\n",
+      "🤖 Bot (Greeting): Hi human, please tell me your GeniSys user\n",
+      "Similarity: 1.0\n",
+      "\n",
+      "🗣️ User: who are you\n",
+      "🤖 Bot (NameQuery): You can call me Geni\n",
+      "Similarity: 0.821\n",
+      "\n",
+      "🗣️ User: bye\n",
+      "🤖 Bot (GoodBye): See you later\n",
+      "Similarity: 1.0\n",
+      "\n",
+      "🗣️ User: what can you do\n",
+      "🤖 Bot (PodBayDoorResponse): It is classified, I could tell you but I would have to kill you!\n",
+      "Similarity: 0.455\n",
+      "\n",
+      "🗣️ User: hi human\n",
+      "🤖 Bot (Greeting): Hi human, please tell me your GeniSys user\n",
+      "Similarity: 0.659\n"
+     ]
+    }
+   ],
+   "source": [
+    "queries = [\n",
+    "    \"hello there\",\n",
+    "    \"who are you\",\n",
+    "    \"bye\",\n",
+    "    \"what can you do\",\n",
+    "    \"hi human\"\n",
+    "]\n",
+    "\n",
+    "for q in queries:\n",
+    "    result = get_response(q, df, model)\n",
+    "    print(f\"\\n🗣️ User: {result['user_input']}\")\n",
+    "    print(f\"🤖 Bot ({result['predicted_intent']}): {result['response']}\")\n",
+    "    print(f\"Similarity: {result['similarity']}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a55a39d4-ed03-4b4e-b92d-5f8019e83c5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved dataset with embeddings.\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.to_pickle(\"chatbot_with_embeddings.pkl\")\n",
+    "print(\"Saved dataset with embeddings.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3232a58e-4339-4ef5-a821-d44b09a35787",
    "metadata": {},
    "outputs": [],
    "source": []
